--- a/my_site/blog/templates/blog/all-posts.html
+++ b/my_site/blog/templates/blog/all-posts.html
@@ -6,8 +6,8 @@ All Posts
 {% endblock %}
 
 {% block css_file %}
+<link rel="stylesheet" href="{% static "blog/all-posts.css" %}" />
 <link rel="stylesheet" href="{% static "blog/post.css" %}" />
-<link rel="stylesheet" href="{% static "blog/index.css" %}" />
 {% endblock  %}
 
 {% block content %}
