completed todo section

--- a/journal/templates/base.html
+++ b/journal/templates/base.html
@@ -14,7 +14,7 @@
         <nav>
             <a href="{% url "todos" %}">To-Do</a>
             <a href="">Notes</a>
-            <a href="">Gallery</a>
+            <a href="{% url "gallery-list" %}">Gallery</a>
             <a href="">Contact</a>
         </nav>
     </header>
