--- a/journal/templates/base.html
+++ b/journal/templates/base.html
@@ -13,9 +13,8 @@
         <h1><a href="{% url "home-page" %}">Suman</a></h1>
         <nav>
             <a href="{% url "todos" %}">To-Do</a>
-            <a href="">Notes</a>
             <a href="{% url "gallery-list" %}">Gallery</a>
-            <a href="">Contact</a>
+            <a href="{% url "contact-page" %}">Contact</a>
         </nav>
     </header>
     <main>
